--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
 
         function info() {
-            alert("Jadwal Pelajaran Kelas 10 TKJ A")
+            alert("Jadwal Pelajaran Kelas 10 TKJ B")
         }
     </script>
     <style type="text/css">
